--- a/fastion.css
+++ b/fastion.css
@@ -77,7 +77,6 @@
     height: 400px;
     left: 5rem;
     top: 1rem;
-    z-index: 1;
     position: relative;
     margin: auto;
     text-align: center;
@@ -394,7 +393,7 @@ iframe {
     {
         margin-top: 80px;
         left: 0;
-        width: 300px;
+        width: 20rem;
         max-height: 150px;
     }
     .video-section h2
@@ -404,7 +403,7 @@ iframe {
     .video-section iframe
     {
         width: 100%;
-        height: 100%;
+        height: 90%;
     }
     .offer img
     {
